fix icon rendering inside buttons

--- a/src/TwentyFortyEight.Maui/Resources/Strings/AppStrings.resx
+++ b/src/TwentyFortyEight.Maui/Resources/Strings/AppStrings.resx
@@ -74,10 +74,10 @@
     <value>BEST</value>
   </data>
   <data name="NewGame" xml:space="preserve">
-    <value>New Game</value>
+    <value>↻ New Game</value>
   </data>
   <data name="Undo" xml:space="preserve">
-    <value>Undo</value>
+    <value>↩ Undo</value>
   </data>
   <data name="CurrentScoreDescription" xml:space="preserve">
     <value>Current score</value>
@@ -101,10 +101,10 @@
     <value>Best: {0}</value>
   </data>
   <data name="TryAgain" xml:space="preserve">
-    <value>Try Again</value>
+    <value>↻ Try Again</value>
   </data>
   <data name="Statistics" xml:space="preserve">
-    <value>Statistics</value>
+    <value>📊 Statistics</value>
   </data>
   <data name="StatisticsPageTitle" xml:space="preserve">
     <value>📊 Statistics</value>
