feat: Enhance accessibility and user feedback in game
- Added localized strings for screen reader announcements for current score and game over final score.
- Implemented ScreenReaderScoreAnnouncement and ScreenReaderGameOverFinalScore methods in localization service.
- Refactored GameViewModel to utilize IUserFeedbackService for score announcements and game over notifications.
- Introduced GameSessionCoordinator to manage achievements and social gaming interactions.
- Created GameStateRepository for handling game state persistence and best score management.
- Removed INavigationService in favor of a messaging pattern for navigation.
- Updated tests to reflect changes in the ViewModel structure and user feedback mechanisms.

--- a/src/TwentyFortyEight.Maui/Resources/Strings/AppStrings.resx
+++ b/src/TwentyFortyEight.Maui/Resources/Strings/AppStrings.resx
@@ -241,4 +241,10 @@ Keep combining tiles to reach the 2048 tile and win the game!
   <data name="EnableHaptics" xml:space="preserve">
     <value>Enable Haptic Feedback</value>
   </data>
+  <data name="ScreenReaderScoreAnnouncementFormat" xml:space="preserve">
+    <value>Score: {0}</value>
+  </data>
+  <data name="ScreenReaderGameOverFinalScoreFormat" xml:space="preserve">
+    <value>Game Over! Final score: {0}</value>
+  </data>
 </root>
